spacing issue fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,6 +24,6 @@ body {
 }
 
 p:has(br) {
-  line-height: 0;
-  margin: 0;
+  line-height: 0 !important;
+  margin: 0 !important;
 }
